# Projet_S9-Depixelize

./: .gitignore  CMakeLists.txt  Projet_Depixelisation.cpp  Projet_Depixelisation.h  README.md  User_Interface.cpp  cell-rit  main.cpp
img/: img.md
src/: CMakeLists.txt  User_Interface.cpp  optimize.cpp  optimize.h  similarity_graph.cpp  similarity_graph.h  spline.cpp  spline.h  voronoi_diagram.cpp  voronoi_diagram.h
ui/: Projet_Depixelisation.cpp  Projet_Depixelisation.h
